--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body {
-  background-color: #f1f1f1;
+  background-color: #6e828a;
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  color: #333;
+  color: #e3eff3;
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -12,9 +12,11 @@ body {
   align-content: center;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 .main-container {
-  border: 1px solid #000000;
+  background-color: #143a52;
+  border: 3px solid #ffffff;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -22,9 +24,131 @@ body {
   justify-content: space-evenly;
   align-items: flex-start;
   padding: 0 15px;
-  width: 550px;
+  width: 650px;
   max-width: 100%;
-  height: 550px;
+  height: 650px;
+  max-height: 100%;
   margin: 0 auto;
   padding: 0 15px;
+  border-radius: 1em;
+}
+.main-container h1 {
+  font-size: 2.7rem;
+  font-weight: 700;
+  margin: 0;
+  padding: 0;
+}
+.main-container p {
+  font-size: 1.2rem;
+  font-weight: 400;
+  margin: 0;
+  padding: 0;
+}
+.password {
+  border: 1px solid;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 100%;
+  height: 150px;
+  max-height: 100%;
+  margin: 0 auto;
+  border-radius: 1em;
+  margin-left: auto;
+  margin-right: auto;
+}
+button {
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 20px 92px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: auto;
+  cursor: pointer;
+  border-radius: 5px;
+}
+input {
+  font-size: 20px;
+  background-origin: padding-box;
+  gap: 10px;
+  width: 300px;
+  height: 50px;
+  border-radius: 5px;
+}
+.pasword-input1 {
+  display: flex;
+  flex-direction: column;
+  align-content: space-around;
+  align-items: center;
+  justify-content: center;
+}
+.pasword-input2 {
+  display: flex;
+  flex-direction: column;
+  align-content: space-around;
+  align-items: center;
+  justify-content: center;
+}
+.password button {
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 10px 100px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+button:hover {
+  background-color: #3e8e41;
+}
+.slider.round {
+  border-radius: 34px;
+}
+.slider.round:before {
+  border-radius: 50%;
+}
+.slider {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+.slider input {
+  opacity: 10;
+  width: 0;
+  height: 0;
+}
+.slider {
+  background-color: #ccc;
+  border-radius: 34px;
+}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+p {
+  font-size: 1.5rem;
+  font-weight: 400;
+  margin: 0;
+  padding: 0;
+}
+h1 {
 }
