--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body {
-  background-color: #6e828a;
+  background-color: #1f2937;
   font-family: "Roboto", sans-serif;
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 1.2;
   color: #e3eff3;
   width: 100vw;
   height: 100vh;
@@ -15,11 +15,10 @@ body {
   overflow: hidden;
 }
 .main-container {
-  background-color: #143a52;
-  border: 3px solid #ffffff;
+  background-color: #1b252a;
+  border: 3px solid #6096b4;
   display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
   align-content: center;
   justify-content: space-evenly;
   align-items: flex-start;
@@ -33,22 +32,23 @@ body {
   border-radius: 1em;
 }
 .main-container h1 {
-  font-size: 2.7rem;
+  font-size: 74px;
   font-weight: 700;
   margin: 0;
   padding: 0;
+  color: lightyellow;
 }
 .main-container p {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   font-weight: 400;
   margin: 0;
   padding: 0;
+  color: lightyellow;
 }
 .password {
-  border: 1px solid;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   width: 100%;
   max-width: 100%;
@@ -56,13 +56,50 @@ body {
   max-height: 100%;
   margin: 0 auto;
   border-radius: 1em;
+}
+.password-input1 {
+  display: flex;
+  flex-direction: column;
+  align-content: space-around;
+  align-items: center;
+  justify-content: center;
+}
+.password-input2 {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+}
+.password button {
+  background-color: #4caf50;
+  border: none;
+  color: lightyellow;
+  padding: 10px 100px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+.generate-btn {
+  display: flex;
   margin-left: auto;
   margin-right: auto;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  border-top: 3px solid #ffffff;
+  width: max-content;
+  padding: 10px 0;
 }
 button {
   background-color: #4caf50;
   border: none;
-  color: white;
+  color: lightyellow;
   padding: 20px 92px;
   text-align: center;
   text-decoration: none;
@@ -75,41 +112,18 @@ button {
 }
 input {
   font-size: 20px;
-  background-origin: padding-box;
   gap: 10px;
-  width: 300px;
+  width: 240px;
   height: 50px;
   border-radius: 5px;
-}
-.pasword-input1 {
-  display: flex;
-  flex-direction: column;
-  align-content: space-around;
-  align-items: center;
-  justify-content: center;
-}
-.pasword-input2 {
-  display: flex;
-  flex-direction: column;
-  align-content: space-around;
-  align-items: center;
-  justify-content: center;
-}
-.password button {
-  background-color: #4caf50;
-  border: none;
-  color: white;
-  padding: 10px 100px;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 20px;
-  cursor: pointer;
-  border-radius: 5px;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  background-color: #273549;
+  border: #1b252a;
+  color: #4caf50;
 }
+
 button:hover {
-  background-color: #3e8e41;
+  opacity: 0.8;
 }
 .slider.round {
   border-radius: 34px;
@@ -118,6 +132,12 @@ button:hover {
   border-radius: 50%;
 }
 .slider {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
   position: relative;
   display: inline-block;
   width: 60px;
@@ -149,6 +169,4 @@ p {
   font-weight: 400;
   margin: 0;
   padding: 0;
-}
-h1 {
 }
