--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,15 @@ body {
   color: #e3eff3;
   width: 100vw;
   height: 100vh;
+  max-height: 100vh;
+  max-width: 100vw;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   align-content: center;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 .main-container {
   background-color: #1b252a;
@@ -24,7 +26,7 @@ body {
   align-items: flex-start;
   padding: 0 15px;
   width: 650px;
-  max-width: 100%;
+  max-width: -webkit-fill-available;
   height: 650px;
   max-height: 100%;
   margin: 0 auto;
@@ -52,11 +54,15 @@ body {
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
-  max-width: 100%;
+  max-width: -Webkit-fill-available;
   height: 150px;
   max-height: 100%;
   margin: 0 auto;
   border-radius: 1em;
+  align-self: auto;
+  padding: 0 15px;
+  position: relative;
+  border: border-box;
 }
 .password-input1 {
   display: flex;
@@ -244,4 +250,306 @@ p {
   font-weight: 400;
   margin: 0;
   padding: 0;
+}
+@media (max-width: 600px) {
+  body {
+    background-color: #1f2937;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    line-height: 1;
+    color: #e3eff3;
+    width: 100vw;
+    height: 100vh;
+    max-height: 100vh;
+    max-width: 100vw;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    overflow-x: hidden;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 10px;
+  }
+  .main-container h1 {
+    font-size: xxx-large;
+    position: relative;
+    padding-left: 8px;
+  }
+  .password {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: space-around;
+    align-items: center;
+    justify-content: center;
+  }
+  .main-container {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    max-height: 100vh;
+    max-width: 100vw;
+    padding: 0;
+    margin: 10 10;
+  }
+  .password {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    flex-wrap: nowrap;
+    align-content: flex-start;
+    align-items: center;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 1.5;
+  }
+  .password button {
+    width: 150px;
+    height: 30px;
+    font-size: 10px;
+    padding: 10 10px;
+    margin: 0;
+  }
+  input {
+    width: 195px;
+    height: 30px;
+    font-size: 10px;
+    padding: 10 10px;
+    margin: 0;
+    margin-bottom: 5px;
+  }
+  button {
+    width: 150px;
+    height: 30px;
+    font-size: 12px;
+    margin: 0;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+  }
+  .checkbox label {
+    font-size: 10px;
+    font-weight: 400;
+    margin: 0;
+    padding: 0;
+  }
+  .checkbox p {
+    font-size: 10px;
+    font-weight: 400;
+    margin: 0;
+    padding: 0;
+  }
+  .checkbox input[type="checkbox"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    outline: none;
+    width: 10px;
+    height: 10px;
+    border: 1px solid #ffffff;
+    border-radius: 2px;
+    background-color: #1b252a;
+  }
+  .slider {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    position: relative;
+    display: inline-block;
+    width: 20px;
+    height: 12px;
+  }
+  .slider input {
+    opacity: 10;
+    width: 0;
+    height: 0;
+  }
+  .slider {
+    background-color: #ccc;
+    border-radius: 34px;
+  }
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 10px;
+    width: 10px;
+    left: 1px;
+    bottom: 1px;
+    background-color: white;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+    border-radius: 50%;
+  }
+  .slider.round {
+    border-radius: 34px;
+  }
+  .slider.round:before {
+    border-radius: 50%;
+  }
+}
+@media (max-width: 300px) {
+  body {
+    background-color: #1f2937;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    line-height: 1;
+    color: #e3eff3;
+    width: 100vw;
+    height: 100vh;
+    max-height: 100vh;
+    max-width: 100vw;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    overflow-x: hidden;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 10px;
+  }
+  .main-container h1 {
+    font-size: xxx-large;
+    position: relative;
+    padding-left: 8px;
+  }
+  .password {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: space-around;
+    align-items: center;
+    justify-content: center;
+  }
+  .main-container {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    max-height: 100vh;
+    max-width: 100vw;
+    padding: 0;
+    margin: 10 10;
+  }
+  .password {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    flex-wrap: nowrap;
+    align-content: flex-start;
+    align-items: center;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 1.5;
+  }
+  .password button {
+    width: 150px;
+    height: 30px;
+    font-size: 10px;
+    padding: 10 10px;
+    margin: 0;
+  }
+  input {
+    width: 195px;
+    height: 30px;
+    font-size: 10px;
+    padding: 10 10px;
+    margin: 0;
+    margin-bottom: 5px;
+  }
+  button {
+    width: 150px;
+    height: 30px;
+    font-size: 12px;
+    margin: 0;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+  }
+  .checkbox label {
+    font-size: 10px;
+    font-weight: 400;
+    margin: 0;
+    padding: 0;
+  }
+  .checkbox p {
+    font-size: 10px;
+    font-weight: 400;
+    margin: 0;
+    padding: 0;
+  }
+  .checkbox input[type="checkbox"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    outline: none;
+    width: 10px;
+    height: 10px;
+    border: 1px solid #ffffff;
+    border-radius: 2px;
+    background-color: #1b252a;
+  }
+  .slider {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    position: relative;
+    display: inline-block;
+    width: 20px;
+    height: 12px;
+  }
+  .slider input {
+    opacity: 10;
+    width: 0;
+    height: 0;
+  }
+  .slider {
+    background-color: #ccc;
+    border-radius: 34px;
+  }
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 10px;
+    width: 10px;
+    left: 1px;
+    bottom: 1px;
+    background-color: white;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+    border-radius: 50%;
+  }
+  .slider.round {
+    border-radius: 34px;
+  }
+  .slider.round:before {
+    border-radius: 50%;
+  }
 }
