--- a/styles.css
+++ b/styles.css
@@ -277,6 +277,7 @@ p {
     font-size: xxx-large;
     position: relative;
     padding-left: 8px;
+    max-height: 65%;
   }
   .password {
     display: flex;
@@ -292,8 +293,8 @@ p {
     align-content: center;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
+    width: 85%;
+    height: 75%;
     max-height: 100vh;
     max-width: 100vw;
     padding: 0;
@@ -402,7 +403,7 @@ p {
     border-radius: 50%;
   }
 }
-@media (max-width: 300px) {
+@media (max-width: 390px) {
   body {
     background-color: #1f2937;
     font-family: "Roboto", sans-serif;
