--- a/styles.css
+++ b/styles.css
@@ -251,6 +251,31 @@ p {
   margin: 0;
   padding: 0;
 }
+/* width */
+::-webkit-scrollbar {
+  width: 15px;
+  height: 200px;
+  position: absolute;
+  max-width: 20px;
+  max-height: 200px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #4caf50;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #4caf50;
+}
 @media (max-width: 600px) {
   body {
     background-color: #1f2937;
