--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ body {
   background-color: #4caf50;
   border: none;
   color: lightyellow;
-  padding: 10px 100px;
+  padding: 10px 50px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -90,6 +90,52 @@ body {
   cursor: pointer;
   border-radius: 5px;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  --green: #4caf50;
+  font-size: 15px;
+  letter-spacing: 0.06em;
+  position: relative;
+  font-family: inherit;
+  border-radius: 0.6em;
+  overflow: hidden;
+  transition: all 0.8s;
+  line-height: 1.4em;
+  border: 2px solid var(--green);
+  background: linear-gradient(
+    to right,
+    rgba(27, 253, 156, 0.1) 1%,
+    transparent 40%,
+    transparent 60%,
+    rgba(27, 253, 156, 0.1) 100%
+  );
+  color: var(--green);
+  box-shadow: inset 0 0 10px rgba(27, 253, 156, 0.4),
+    0 0 9px 3px rgba(27, 253, 156, 0.1);
+}
+
+button:hover {
+  color: #82ffc9;
+  box-shadow: inset 0 0 10px rgba(27, 253, 156, 0.6),
+    0 0 9px 3px rgba(27, 253, 156, 0.2);
+}
+
+button:before {
+  content: "";
+  position: absolute;
+  left: -4em;
+  width: 4em;
+  height: 100%;
+  top: 0;
+  transition: transform 0.4s ease-in-out;
+  background: linear-gradient(
+    to right,
+    transparent 1%,
+    rgba(27, 253, 156, 0.1) 40%,
+    rgba(27, 253, 156, 0.1) 60%,
+    transparent 100%
+  );
+}
+button:hover:before {
+  transform: translateX(15em);
 }
 .generate-btn {
   display: flex;
@@ -100,48 +146,64 @@ body {
   align-items: center;
   justify-content: center;
   border-top: 3px solid #ffffff;
-  width: max-content;
+  width: 60%;
   padding: 10px 0;
 }
 button {
-  background-color: #4caf50;
-  border: none;
-  color: lightyellow;
-  padding: 20px 92px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 20px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-right: auto;
+  display: inline-block;
   cursor: pointer;
-  border-radius: 5px;
+  outline: none;
+  margin-top: 10px;
+  --green: #4caf50;
+  font-size: 15px;
+  padding: 0.7em 2.7em;
+  letter-spacing: 0.06em;
+  position: relative;
+  font-family: inherit;
+  border-radius: 0.6em;
+  overflow: hidden;
+  transition: all 0.3s;
+  line-height: 1.4em;
+  border: 2px solid var(--green);
+  background: linear-gradient(
+    to right,
+    rgba(27, 253, 156, 0.1) 1%,
+    transparent 40%,
+    transparent 60%,
+    rgba(27, 253, 156, 0.1) 100%
+  );
+  color: var(--green);
+  box-shadow: inset 0 0 10px rgba(27, 253, 156, 0.4),
+    0 0 9px 3px rgba(27, 253, 156, 0.1);
 }
+
 button:hover {
-  opacity: 0.8;
+  color: #82ffc9;
+  box-shadow: inset 0 0 10px rgba(27, 253, 156, 0.6),
+    0 0 9px 3px rgba(27, 253, 156, 0.2);
 }
-button:active {
-  opacity: 0.6;
+
+button:before {
+  content: "";
+  position: absolute;
+  left: -4em;
+  width: 4em;
+  height: 100%;
+  top: 0;
+  transition: transform 0.4s ease-in-out;
+  background: linear-gradient(
+    to right,
+    transparent 1%,
+    rgba(27, 253, 156, 0.1) 40%,
+    rgba(27, 253, 156, 0.1) 60%,
+    transparent 100%
+  );
 }
-button:focus {
-  outline: none;
-}
-button:disabled {
-  opacity: 0.6;
-  cursor: not-allowed;
-}
-button:disabled:hover {
-  opacity: 0.6;
-}
-button:disabled:active {
-  opacity: 0.6;
-}
-button:disabled:focus {
-  outline: none;
+button:hover:before {
+  transform: translateX(15em);
 }
 
 .checkbox {
-  border: #4caf50 2px solid;
   display: flex;
   flex-direction: row;
   align-content: space-around;
@@ -208,51 +270,64 @@ input {
   color: #4caf50;
 }
 
-.slider.round {
-  border-radius: 34px;
-}
-.slider.round:before {
-  border-radius: 50%;
-}
-.slider {
-  display: flex;
-  flex-direction: row;
-  align-content: center;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-.slider input {
-  opacity: 10;
-  width: 0;
-  height: 0;
-}
-.slider {
-  background-color: #ccc;
-  border-radius: 34px;
-}
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  border-radius: 50%;
-}
 p {
   font-size: 1rem;
   font-weight: 400;
   margin: 0;
   padding: 0;
 }
+/* The switch - the box around the slider */
+.switch {
+  font-size: 17px;
+  position: relative;
+  display: inline-block;
+  width: 3.5em;
+  height: 2em;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  --background: #1b252a;
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--background);
+  transition: 0.5s;
+  border-radius: 30px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 1.4em;
+  width: 1.4em;
+  border-radius: 50%;
+  left: 10%;
+  bottom: 15%;
+  box-shadow: inset 8px -4px 0px 0px #fff000;
+  background: var(--background);
+  transition: 0.5s;
+}
+
+input:checked + .slider {
+  background-color: #ffffff;
+}
+
+input:checked + .slider:before {
+  transform: translateX(100%);
+  box-shadow: inset 15px -4px 0px 15px #fff000;
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 15px;
