--- a/styles.css
+++ b/styles.css
@@ -175,6 +175,7 @@ button {
   color: var(--green);
   box-shadow: inset 0 0 10px rgba(27, 253, 156, 0.4),
     0 0 9px 3px rgba(27, 253, 156, 0.1);
+  transform: translate Y(5, 5);
 }
 
 button:hover {
@@ -504,8 +505,84 @@ input:checked + .slider:before {
   .slider.round:before {
     border-radius: 50%;
   }
+  .switch {
+    font-size: 17px;
+    position: relative;
+    display: inline-block;
+    width: 3.5em;
+    height: 2em;
+  }
+
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  /* The slider */
+  .slider {
+    --background: #1b252a;
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--background);
+    transition: 0.5s;
+    border-radius: 30px;
+  }
+
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 1.4em;
+    width: 1.4em;
+    border-radius: 50%;
+    left: 10%;
+    bottom: 15%;
+    box-shadow: inset 8px -4px 0px 0px #fff000;
+    background: var(--background);
+    transition: 0.5s;
+  }
+
+  input:checked + .slider {
+    background-color: #ffffff;
+  }
+
+  input:checked + .slider:before {
+    transform: translateX(100%);
+    box-shadow: inset 15px -4px 0px 15px #fff000;
+  }
+
+  /* width */
+  ::-webkit-scrollbar {
+    width: 15px;
+    height: 200px;
+    position: absolute;
+    max-width: 20px;
+    max-height: 200px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #4caf50;
+    border-radius: 10px;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #4caf50;
+  }
 }
-@media (max-width: 390px) {
+@media (max-width: 400px) {
   body {
     background-color: #1f2937;
     font-family: "Roboto", sans-serif;
@@ -579,6 +656,7 @@ input:checked + .slider:before {
     padding: 10 10px;
     margin: 0;
     margin-bottom: 5px;
+    position: relative;
   }
   button {
     width: 150px;
@@ -616,43 +694,171 @@ input:checked + .slider:before {
     border-radius: 2px;
     background-color: #1b252a;
   }
-  .slider {
+  .switch {
+    font-size: 17px;
     display: flex;
-    flex-direction: row;
-    align-content: center;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
+    width: inherit;
+    height: -webkit-fill-available;
+    margin-top: 0px;
     position: relative;
-    display: inline-block;
-    width: 20px;
-    height: 12px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0;
+    padding: 0;
+    display: flex;
+    border: #1b252a;
   }
-  .slider input {
-    opacity: 10;
+
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
     width: 0;
     height: 0;
   }
+
+  /* The slider */
   .slider {
-    background-color: #ccc;
-    border-radius: 34px;
+    --background: #1b252a;
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--background);
+    transition: 0.5s;
+    border-radius: 30px;
   }
+
   .slider:before {
     position: absolute;
     content: "";
-    height: 10px;
-    width: 10px;
-    left: 1px;
-    bottom: 1px;
-    background-color: white;
-    -webkit-transition: 0.4s;
-    transition: 0.4s;
+    height: 1.4em;
+    width: 1.4em;
     border-radius: 50%;
+    left: 10%;
+    bottom: 15%;
+    box-shadow: inset 8px -4px 0px 0px #fff000;
+    background: var(--background);
+    transition: 0.5s;
   }
-  .slider.round {
-    border-radius: 34px;
+
+  input:checked + .slider {
+    background-color: #ffffff;
   }
-  .slider.round:before {
+
+  input:checked + .slider:before {
+    transform: translateX(100%);
+    box-shadow: inset 15px -4px 0px 15px #fff000;
+  }
+
+  /* width */
+  ::-webkit-scrollbar {
+    width: 15px;
+    height: 200px;
+    position: absolute;
+    max-width: 20px;
+    max-height: 200px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #4caf50;
+    border-radius: 10px;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #4caf50;
+  }
+  .switch {
+    font-size: 17px;
+    display: flex;
+    width: inherit;
+    height: -webkit-fill-available;
+    margin-top: 0px;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0;
+    padding: 0;
+    display: flex;
+    border: #1b252a;
+  }
+  }
+
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  /* The slider */
+  .slider {
+    --background: #1b252a;
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--background);
+    transition: 0.5s;
+    border-radius: 30px;
+  }
+
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 1.4em;
+    width: 1.4em;
     border-radius: 50%;
+    left: 10%;
+    bottom: 15%;
+    box-shadow: inset 8px -4px 0px 0px #fff000;
+    background: var(--background);
+    transition: 0.5s;
+  }
+
+  input:checked + .slider {
+    background-color: #ffffff;
+  }
+
+  input:checked + .slider:before {
+    transform: translateX(100%);
+    box-shadow: inset 15px -4px 0px 15px #fff000;
+  }
+
+  /* width */
+  ::-webkit-scrollbar {
+    width: 15px;
+    height: 200px;
+    position: absolute;
+    max-width: 20px;
+    max-height: 200px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #4caf50;
+    border-radius: 10px;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #4caf50;
   }
 }
