--- a/styles.css
+++ b/styles.css
@@ -175,7 +175,7 @@ button {
   color: var(--green);
   box-shadow: inset 0 0 10px rgba(27, 253, 156, 0.4),
     0 0 9px 3px rgba(27, 253, 156, 0.1);
-  transform: translate Y(5, 5);
+  transform: translate Y();
 }
 
 button:hover {
@@ -467,61 +467,6 @@ input:checked + .slider:before {
     background-color: #1b252a;
   }
   .slider {
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    position: relative;
-    display: inline-block;
-    width: 20px;
-    height: 12px;
-  }
-  .slider input {
-    opacity: 10;
-    width: 0;
-    height: 0;
-  }
-  .slider {
-    background-color: #ccc;
-    border-radius: 34px;
-  }
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 10px;
-    width: 10px;
-    left: 1px;
-    bottom: 1px;
-    background-color: white;
-    -webkit-transition: 0.4s;
-    transition: 0.4s;
-    border-radius: 50%;
-  }
-  .slider.round {
-    border-radius: 34px;
-  }
-  .slider.round:before {
-    border-radius: 50%;
-  }
-  .switch {
-    font-size: 17px;
-    position: relative;
-    display: inline-block;
-    width: 3.5em;
-    height: 2em;
-  }
-
-  /* Hide default HTML checkbox */
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-
-  /* The slider */
-  .slider {
     --background: #1b252a;
     position: absolute;
     cursor: pointer;
@@ -533,7 +478,6 @@ input:checked + .slider:before {
     transition: 0.5s;
     border-radius: 30px;
   }
-
   .slider:before {
     position: absolute;
     content: "";
@@ -546,319 +490,188 @@ input:checked + .slider:before {
     background: var(--background);
     transition: 0.5s;
   }
-
-  input:checked + .slider {
-    background-color: #ffffff;
-  }
-
-  input:checked + .slider:before {
-    transform: translateX(100%);
-    box-shadow: inset 15px -4px 0px 15px #fff000;
-  }
-
-  /* width */
-  ::-webkit-scrollbar {
-    width: 15px;
-    height: 200px;
-    position: absolute;
-    max-width: 20px;
-    max-height: 200px;
-  }
-
-  /* Track */
-  ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
-    border-radius: 10px;
-  }
-
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #4caf50;
-    border-radius: 10px;
-  }
-
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #4caf50;
-  }
-}
-@media (max-width: 400px) {
-  body {
-    background-color: #1f2937;
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-    line-height: 1;
-    color: #e3eff3;
-    width: 100vw;
-    height: 100vh;
-    max-height: 100vh;
-    max-width: 100vw;
+  .checkbox {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: nowrap;
     align-content: center;
     justify-content: center;
-    align-items: center;
-    overflow-x: hidden;
-    margin-left: auto;
-    margin-right: auto;
-    padding-right: 10px;
-  }
-  .main-container h1 {
-    font-size: xxx-large;
-    position: relative;
-    padding-left: 8px;
-  }
-  .password {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-content: space-around;
-    align-items: center;
-    justify-content: center;
-  }
-  .main-container {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    max-height: 100vh;
-    max-width: 100vw;
-    padding: 0;
-    margin: 10 10;
-  }
-  .password {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    flex-wrap: nowrap;
-    align-content: flex-start;
     align-items: center;
     position: relative;
     margin-left: auto;
     margin-right: auto;
     line-height: 1.5;
   }
-  .password button {
-    width: 150px;
-    height: 30px;
-    font-size: 10px;
-    padding: 10 10px;
-    margin: 0;
-  }
-  input {
-    width: 195px;
-    height: 30px;
-    font-size: 10px;
-    padding: 10 10px;
-    margin: 0;
-    margin-bottom: 5px;
-    position: relative;
-  }
-  button {
-    width: 150px;
-    height: 30px;
-    font-size: 12px;
-    margin: 0;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
-  }
-  .checkbox label {
-    font-size: 10px;
-    font-weight: 400;
-    margin: 0;
-    padding: 0;
-  }
-  .checkbox p {
-    font-size: 10px;
-    font-weight: 400;
-    margin: 0;
-    padding: 0;
-  }
-  .checkbox input[type="checkbox"] {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    outline: none;
-    width: 10px;
-    height: 10px;
-    border: 1px solid #ffffff;
-    border-radius: 2px;
+  .checkbox input[type="checkbox"]:checked + .slider {
     background-color: #1b252a;
   }
-  .switch {
-    font-size: 17px;
-    display: flex;
-    width: inherit;
-    height: -webkit-fill-available;
-    margin-top: 0px;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 0;
-    padding: 0;
-    display: flex;
-    border: #1b252a;
+  .checkbox input[type="checkbox"]:checked + .slider:before {
+    transform: translateX(1.5em);
   }
-
-  /* Hide default HTML checkbox */
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
+  .checkbox input[type="checkbox"]:checked + .slider:before {
+    box-shadow: inset -8px 4px 0px 0px #fff000;
   }
-
-  /* The slider */
-  .slider {
-    --background: #1b252a;
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: var(--background);
-    transition: 0.5s;
-    border-radius: 30px;
+  .checkbox input[type="checkbox"]:checked + .slider:before {
+    background-color: #1b252a;
   }
-
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 1.4em;
-    width: 1.4em;
-    border-radius: 50%;
-    left: 10%;
-    bottom: 15%;
-    box-shadow: inset 8px -4px 0px 0px #fff000;
-    background: var(--background);
-    transition: 0.5s;
-  }
-
-  input:checked + .slider {
-    background-color: #ffffff;
-  }
-
-  input:checked + .slider:before {
-    transform: translateX(100%);
-    box-shadow: inset 15px -4px 0px 15px #fff000;
-  }
-
-  /* width */
-  ::-webkit-scrollbar {
-    width: 15px;
-    height: 200px;
-    position: absolute;
-    max-width: 20px;
-    max-height: 200px;
-  }
-
-  /* Track */
-  ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
-    border-radius: 10px;
-  }
-
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #4caf50;
-    border-radius: 10px;
-  }
-
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #4caf50;
-  }
-  .switch {
-    font-size: 17px;
-    display: flex;
-    width: inherit;
-    height: -webkit-fill-available;
-    margin-top: 0px;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 0;
-    padding: 0;
-    display: flex;
-    border: #1b252a;
-  }
-  }
-
-  /* Hide default HTML checkbox */
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-
-  /* The slider */
-  .slider {
-    --background: #1b252a;
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: var(--background);
-    transition: 0.5s;
-    border-radius: 30px;
-  }
-
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 1.4em;
-    width: 1.4em;
-    border-radius: 50%;
-    left: 10%;
-    bottom: 15%;
-    box-shadow: inset 8px -4px 0px 0px #fff000;
-    background: var(--background);
-    transition: 0.5s;
-  }
-
-  input:checked + .slider {
-    background-color: #ffffff;
-  }
-
-  input:checked + .slider:before {
-    transform: translateX(100%);
-    box-shadow: inset 15px -4px 0px 15px #fff000;
-  }
-
-  /* width */
-  ::-webkit-scrollbar {
-    width: 15px;
-    height: 200px;
-    position: absolute;
-    max-width: 20px;
-    max-height: 200px;
-  }
-
-  /* Track */
-  ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
-    border-radius: 10px;
-  }
-
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #4caf50;
-    border-radius: 10px;
-  }
-
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #4caf50;
+  @media (max-width: 390px) {
+    body {
+      background-color: #1f2937;
+      font-family: "Roboto", sans-serif;
+      font-size: 16px;
+      line-height: 1;
+      color: #e3eff3;
+      width: 100vw;
+      height: 100vh;
+      max-height: 100vh;
+      max-width: 100vw;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+      align-content: center;
+      justify-content: center;
+      align-items: center;
+      overflow-x: hidden;
+      margin-left: auto;
+      margin-right: auto;
+      padding-right: 10px;
+    }
+    .main-container h1 {
+      font-size: xxx-large;
+      position: relative;
+      padding-left: 8px;
+    }
+    .password {
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+      align-content: space-around;
+      align-items: center;
+      justify-content: center;
+    }
+    .main-container {
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+      max-height: 100vh;
+      max-width: 100vw;
+      padding: 0;
+      margin: 10 10;
+    }
+    .password {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      flex-wrap: nowrap;
+      align-content: flex-start;
+      align-items: center;
+      position: relative;
+      margin-left: auto;
+      margin-right: auto;
+      line-height: 1.5;
+    }
+    .password button {
+      width: 150px;
+      height: 30px;
+      font-size: 10px;
+      padding: 10 10px;
+      margin: 0;
+    }
+    input {
+      width: 195px;
+      height: 30px;
+      font-size: 10px;
+      padding: 10 10px;
+      margin: 0;
+      margin-bottom: 5px;
+    }
+    button {
+      width: 150px;
+      height: 30px;
+      font-size: 12px;
+      margin: 0;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+      flex-wrap: nowrap;
+      justify-content: center;
+      align-items: center;
+    }
+    .checkbox label {
+      font-size: 10px;
+      font-weight: 400;
+      margin: 0;
+      padding: 0;
+    }
+    .checkbox p {
+      font-size: 10px;
+      font-weight: 400;
+      margin: 0;
+      padding: 0;
+    }
+    .checkbox input[type="checkbox"] {
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      outline: none;
+      width: 10px;
+      height: 10px;
+      border: 1px solid #ffffff;
+      border-radius: 2px;
+      background-color: #1b252a;
+    }
+    .slider {
+      --background: #1b252a;
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: var(--background);
+      transition: 0.5s;
+      border-radius: 30px;
+    }
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 1.4em;
+      width: 1.4em;
+      border-radius: 50%;
+      left: 10%;
+      bottom: 15%;
+      box-shadow: inset 8px -4px 0px 0px #fff000;
+      background: var(--background);
+      transition: 0.5s;
+    }
+    .checkbox {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      align-content: center;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      margin-left: auto;
+      margin-right: auto;
+      line-height: 1.5;
+    }
+    .checkbox input[type="checkbox"]:checked + .slider {
+      background-color: #1b252a;
+    }
+    .checkbox input[type="checkbox"]:checked + .slider:before {
+      transform: translateX(1.5em);
+    }
+    .checkbox input[type="checkbox"]:checked + .slider:before {
+      box-shadow: inset -8px 4px 0px 0px #fff000;
+    }
+    .checkbox input[type="checkbox"]:checked + .slider:before {
+      background-color: #1b252a;
+    }
   }
 }
