generate btn border color change

--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ button:hover:before {
   align-content: center;
   align-items: center;
   justify-content: center;
-  border-top: 3px solid #6096b4;
+  border-top: 3px solid #4caf50;
   width: 60%;
   padding: 10px 0;
 }
